# cece

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: cece-1.md
docs/superpowers/plans/: 2026-03-13-cece-implementation.md  2026-03-17-cece-enhancements.md
src/: error.rs  lib.rs  main.rs
src/claude/: mod.rs
src/cli/: agent.rs  check.rs  hook.rs  init.rs  list.rs  mod.rs  status.rs  template.rs  workspace.rs
src/cmux/: mod.rs
src/completions/: cece.zsh
src/db/: agent.rs  config.rs  mod.rs  repo.rs  schema.sql  template.rs  workspace.rs
src/git/: mod.rs
tests/: agent_test.rs  git_test.rs  init_test.rs  status_test.rs  template_test.rs  workspace_test.rs
