[package]
name = "cece"
version = "0.1.0"
edition = "2021"
description = "Manage workspaces of Git repositories and AI agents"
license = "MIT"
repository = "https://github.com/christriddle/cece"

[lib]
name = "cece"
path = "src/lib.rs"

[[bin]]
name = "cece"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select", "completion"] }
comfy-table = "7"
dirs = "5"
terminal_size = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
